make the footer fixed, made the input lables visible, Politician h1 changed to Candidate

--- a/css/politico.css
+++ b/css/politico.css
@@ -1,17 +1,20 @@
-@media(min-width: 468px) {
+@media(min-width: 400px) {
     body {
         font-family: Verdana, Geneva, Tahoma, sans-serif;
         font-size: 15px;
         line-height: 26px;
         margin: 0px;
         background-size: cover;
+        display: flex;
+        flex-direction: column;
     }
     footer {
-        padding: 20px;
+        padding: 10px;
         margin-top: 20px;
         color: white;
         background-color: black;
         text-align: center;
+        flex-shrink: 0;
     }
 
 /* .classes #ids */
@@ -84,16 +87,20 @@ header a:hover {
     min-height: 400px;
     text-align: center;
     color: black;
-    font-weight: bold
+    font-weight: bold;
+    flex: 1 0 auto;
+
 }
 
 /* style the h1 in the middle section */
 
 #middle-section h1{
-    margin-top: 100px;
+    margin-top: 60px;
     font-size: 55px;
-    margin-bottom: 10px;
-    color: red
+    margin-bottom: 90px;
+    color: red;
+    z-index: 1;
+    min-width: 200px;
 }
 
 /* style the paragraph in the middle section */
@@ -177,7 +184,7 @@ header a:hover {
 .inputField label{
     display: block;
     text-align: left;
-    color: white;
+    color: black;
     text-transform: uppercase;
 }
 
